--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Primera Pagina </title>
+    <title> Primera Pagina Web </title>
 </head>
 <body>
     <h1 style="text-align: center;">  Hola Mundo!  </h1>
