--- a/Actividad1.html
+++ b/Actividad1.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ayuda a un peludo! </title>
+    <link rel="stylesheet" href="/Estilos/Estilo1.css">
 </head>
+
+
+
+
 <body>
     
-    <h1 style="text-align: center;"> ONG - AYUDA A UN PELUDO </h1>
+    <h1 class="pepe"> ONG - AYUDA A UN PELUDO </h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quibusdam perspiciatis, architecto doloremque explicabo eum possimus veniam animi earum quisquam minima dolorum reprehenderit, rerum unde delectus aliquid quis aspernatur commodi esse iusto dolorem ipsam eos consectetur obcaecati! Soluta sequi eveniet modi fuga, neque quae ut tempore veritatis mollitia quisquam. Harum voluptates odit repellendus adipisci, ipsum quisquam vel consectetur. Quis esse dolores, architecto sint temporibus ipsa assumenda illum delectus amet eius neque! Nostrum libero ut fuga ab eos. Ratione, ab totam!</p>
+    <p class="pepe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quibusdam perspiciatis, architecto doloremque explicabo eum possimus veniam animi earum quisquam minima dolorum reprehenderit, rerum unde delectus aliquid quis aspernatur commodi esse iusto dolorem ipsam eos consectetur obcaecati! Soluta sequi eveniet modi fuga, neque quae ut tempore veritatis mollitia quisquam. Harum voluptates odit repellendus adipisci, ipsum quisquam vel consectetur. Quis esse dolores, architecto sint temporibus ipsa assumenda illum delectus amet eius neque! Nostrum libero ut fuga ab eos. Ratione, ab totam!</p>
 
-    <h2 style="text-align: center;"> Nuestros Integrantes: </h2>
+    <h1 style="text-align: center;"> Nuestros Integrantes: </h1>
  
     <li> Persona 1 - Cargo 1</li>
     <li> Persona 2 - Cargo 2</li>
