--- a/Gatos.html
+++ b/Gatos.html
@@ -15,6 +15,7 @@
 
     <ul>
         <img src="Imagenes/gato ginger.jpg">
+        <a href="http://127.0.0.1:5500/Ginger.html"> GINGER </a> 
     </ul>
 
     <ul>
