--- a/Gatos.html
+++ b/Gatos.html
@@ -20,10 +20,12 @@
 
     <ul>
         <img src="Imagenes/gato tommy.jpg">
+        <a href="http://127.0.0.1:5500/Tommy.html"> TOMMY </a>
     </ul>
 
     <ul>
         <img src="Imagenes/gato lucifer.jpg">
+        <a href="http://127.0.0.1:5500/Lucifer.html"> LUCIFER </a>
     </ul>
 
 
