--- a/Perros.html
+++ b/Perros.html
@@ -12,6 +12,19 @@
     <p style="text-align: justify;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam laudantium eligendi illum explicabo? Quibusdam sed iure esse quae, placeat consectetur voluptatum architecto voluptatem ab, odit saepe pariatur distinctio vitae illum sequi neque deserunt tenetur! Dignissimos ea officia veniam minima esse ratione illo corporis maxime, explicabo nihil eos dolorum error non ipsum voluptas quod iure reprehenderit, incidunt sunt architecto, quo iste tenetur quas. Explicabo aut sequi culpa deserunt est cupiditate reprehenderit voluptatum, ad nam ipsam esse rerum, exercitationem aliquam? Quos, ut!</p>
 
     <h2 style="text-align: center;"> Nuestros perros que buscan familia </h2>
+    <ul>
+        <img src="Imagenes/perro cachulo.jpg">
+        <a href="http://127.0.0.1:5500/Cachulo.html"> CACHULO</a>
 
+    </ul>
+    <ul>
+        <img src="Imagenes/niñav2.jpg">
+        <a href="http://127.0.0.1:5500/Niña.html"> NIÑA</a>
+    </ul>
+
+    <ul>
+        <img src="Imagenes/flacav2.jpg">
+        <a href="http://127.0.0.1:5500/Flaca.html"> FLACA</a>
+    </ul>
 </body>
 </html>
