--- a/Actividad1.html
+++ b/Actividad1.html
@@ -37,7 +37,7 @@
 
 
     <ul>
-        <img src="Imagenes/images.jpg">
+        <img src="Imagenes/descargar gato (2).jpg">
         <a href="http://127.0.0.1:5500/Gatos.html"> GATOS </a> 
 
     </ul>
