--- a/Gatos.html
+++ b/Gatos.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ayuda a un peludo </title>
+    <link rel="stylesheet" href="/Estilos/Estilo1.css">
+
 </head>
-<body>
+<body id="cuerpo">
     <h1 style="text-align: center;"> GATOS EN ADOPCION </h1>
 
-    <p style="text-align: justify;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit earum ut iure laboriosam quos ullam tenetur a voluptate delectus soluta, dolore aliquam voluptas blanditiis eum eligendi aspernatur et consequatur adipisci ipsum, ratione ex magni odit sunt. Praesentium distinctio quae quasi sunt! Quia dicta ipsam nemo cum nostrum perspiciatis repellendus impedit.</p>
+    <p style="text-align: center;"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit earum ut iure laboriosam quos ullam tenetur a voluptate delectus soluta, dolore aliquam voluptas blanditiis eum eligendi aspernatur et consequatur adipisci ipsum, ratione ex magni odit sunt. Praesentium distinctio quae quasi sunt! Quia dicta ipsam nemo cum nostrum perspiciatis repellendus impedit.</p>
 
     <h2 style="text-align: center;"> Nuestros gatos que buscar familia: </h2>
 
