--- a/Niña.html
+++ b/Niña.html
@@ -9,11 +9,12 @@
 <body>
     
     <ul>
+
         <img src="Imagenes/niña.jpg">
         <p style="text-align: center;"> Nombre: NIÑA</p>
         <p style="text-align: center;"> Edad: 2 años </p>
         <p style="text-align: center;"> Genero: HEMBRA</p>
-        <p style="text-align: center;"> Esterilazacion: N</p>
+        <p style="text-align: center;"> Esterilizacion: N</p>
         <p style="text-align: center;"> Nro. Chip: 333333345754</p>
 
 
