--- a/Actividad1.html
+++ b/Actividad1.html
@@ -7,34 +7,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ayuda a un peludo! </title>
     <link rel="stylesheet" href="/Estilos/Estilo1.css">
+
+    <style>
+
+       header{
+        color: blue;
+       }
+
+       .encabezado{
+        color: red;
+       }
+
+
+
+    </style>
+
+
 </head>
 
+<body id="cuerpo">
+    <div id="container"> 
+        <strong>
+            <header id = "TITULOS"><h1 id = "encabezado"> ong- ayuda a un peludo </h1></header>
+
+        </strong>
 
 
 
-<body>
-    
+
+
+
+    </div>
     <h1 class="pepe"> ONG - AYUDA A UN PELUDO </h1>
 
     <p class="pepe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quibusdam perspiciatis, architecto doloremque explicabo eum possimus veniam animi earum quisquam minima dolorum reprehenderit, rerum unde delectus aliquid quis aspernatur commodi esse iusto dolorem ipsam eos consectetur obcaecati! Soluta sequi eveniet modi fuga, neque quae ut tempore veritatis mollitia quisquam. Harum voluptates odit repellendus adipisci, ipsum quisquam vel consectetur. Quis esse dolores, architecto sint temporibus ipsa assumenda illum delectus amet eius neque! Nostrum libero ut fuga ab eos. Ratione, ab totam!</p>
 
     <h1 style="text-align: center;"> Nuestros Integrantes: </h1>
- 
-    <li> Persona 1 - Cargo 1</li>
-    <li> Persona 2 - Cargo 2</li>
-    <li> Persona 3 - Cargo 3</li>
-    <li> Persona n - Cargo n</li>
 
-    <h3 style="text-align: center;"> Nuestras secciones de ayuda:</h3>
+ <article>
 
-    <a href=""></a>
+    <li style="text-align: center;"> Adan Albarran - Gerente</li>
+    <li style="text-align: center;"> Adan Albarran - Cargo 2</li>
+    <li style="text-align: center;"> Adan Albarrran- Cargo 3</li>
+    <li style="text-align: center;"> Adan Albarran - Cargo n</li>
 
-    <ul>
-        <img src="Imagenes/descarga.jpg"> 
-        <a href="http://127.0.0.1:5500/Perros.html"> PERROS </a>
-    </ul>
+</article>
 
 
+    <h3 style="text-align: center;"> Nuestras secciones de ayuda </h3>
 
     <ul>
         <img src="Imagenes/descargar gato (2).jpg">
@@ -42,8 +62,18 @@
 
     </ul>
 
+    <ul>
+        <img src="Imagenes/descarga.jpg"> 
+        <a href="http://127.0.0.1:5500/Perros.html"> PERROS </a>
+    </ul>
+
+
 </body>
 
+<footer>
 
+    <strong> <p id ="footer"> Hecho por Adan. </p> </strong>
+
+</footer>
 
 </html>
