--- a/Ginger.html
+++ b/Ginger.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ayuda a un peludo </title>
+    <link rel="stylesheet" href="/Estilos/Estilo1.css">
+
 </head>
-<body>
+
+<body id = "cuerpo">
     <ul>
         <img src="Imagenes/ginger2.jpg">
         <p style="text-align: center;"> Nombre: Ginger</p>
@@ -18,12 +21,7 @@
         <p style="text-align: center;"> Esterilizado: Si</p>
         <br>
         <p style="text-align: center;"> Nro. Chip: 23344434343434</p>
-
-
-
-
     </ul>
-
-
+    
 </body>
 </html>
