--- a/Actividad1.html
+++ b/Actividad1.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Ayuda a un peludo! </title>
     <link rel="stylesheet" href="/Estilos/Estilo1.css">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 
     <style>
 
@@ -32,12 +33,8 @@
 
         </strong>
 
-
-
-
-
-
     </div>
+    
     <h1 class="pepe"> ONG - AYUDA A UN PELUDO </h1>
 
     <p class="pepe">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quibusdam perspiciatis, architecto doloremque explicabo eum possimus veniam animi earum quisquam minima dolorum reprehenderit, rerum unde delectus aliquid quis aspernatur commodi esse iusto dolorem ipsam eos consectetur obcaecati! Soluta sequi eveniet modi fuga, neque quae ut tempore veritatis mollitia quisquam. Harum voluptates odit repellendus adipisci, ipsum quisquam vel consectetur. Quis esse dolores, architecto sint temporibus ipsa assumenda illum delectus amet eius neque! Nostrum libero ut fuga ab eos. Ratione, ab totam!</p>
@@ -48,7 +45,7 @@
 
     <li style="text-align: center;"> Adan Albarran - Gerente</li>
     <li style="text-align: center;"> Adan Albarran - Cargo 2</li>
-    <li style="text-align: center;"> Adan Albarrran- Cargo 3</li>
+    <li style="text-align: center;"> Adan Albarran - Cargo 3</li>
     <li style="text-align: center;"> Adan Albarran - Cargo n</li>
 
 </article>
@@ -72,7 +69,7 @@
 
 <footer>
 
-    <strong> <p id ="footer"> Hecho por Adan. </p> </strong>
+    <strong> <p id ="footer"> Derechos Reservados © </p> </strong>
 
 </footer>
 
